# msc_project

./: README.md
src/multi_uav_simulator/multi_uav_simulator/: CMakeLists.txt  package.xml
src/multi_uav_simulator/multi_uav_simulator/config/: explore.rviz  initial_conditions.yaml  simulation.rviz  testing.rviz
src/multi_uav_simulator/multi_uav_simulator/launch/: simu2.launch
src/multi_uav_simulator/multi_uav_simulator/src/: send_trajectory.cpp  send_trajectory_explore.cpp  send_trajectory_robot2.cpp  send_trajectory_robot3.cpp
src/thesis_optimizer/: package.xml
src/thesis_optimizer/src/: explore_batch.cpp  occ2sdf.cpp  octo2sdf.cpp
src/thesis_uav_gpmp/: CMakeLists.txt
src/thesis_uav_gpmp/src/launch/: 3Dedt_batch.launch  3Dedt_isam.launch  sdf_batch.launch  sdf_isam.launch  simulation.launch
src/thesis_uav_gpmp/src/scripts/: map_generator.py  map_generator_explore.py
src_ws/multi_uav_simulator/multi_uav_simulator/config/: simulation2.rviz
src_ws/multi_uav_simulator/multi_uav_simulator/launch/: simu.launch
src_ws/multi_uav_simulator/multi_uav_simulator/src/: Quadrotor.cpp  send_trajectory_robot4.cpp
src_ws/thesis_optimizer/: CMakeLists.txt
src_ws/thesis_optimizer/src/: explore_isam.cpp  occ2sdfisam.cpp  octo2sdfisam.cpp
src_ws/thesis_uav_gpmp/: package.xml
src_ws/thesis_uav_gpmp/src/launch/: simulation_explore_batch.launch  simulation_explore_isam.launch
video_demo/: video_link.txt
